add info of hobbies

--- a/hobbies.html
+++ b/hobbies.html
@@ -5,14 +5,17 @@
   <title>ふじえもんの趣味</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon-32.ico">
-  <meta name="description" content="ふじえもんの趣味を掲載しています。"> 
+  <meta name="description" content="ふじえもんの趣味を掲載しています．"> 
   <meta name="keywords" content="ポートフォリオ, ふじえもん, 登壇資料, プレゼンテーション"> 
   <meta name="author" content="ふじえもん">
 
   <meta property="og:title" content="ふじえもんの趣味"> 
-  <meta property="og:description" content="ふじえもんの趣味を掲載しています。"> 
-  <meta property="og:image" content="image/fujiemon-slides.png"> 
-  <meta property="og:url" content="https://fujiemon.fujieshota.repl.co/slides.html"> 
+  <meta property="og:description" content="ふじえもんの趣味を掲載しています．"> 
+  <meta property="og:image" content="https://fujiemon.dev/bgfujiemon.png">
+  <meta property="og:url" content="https://fujiemon.dev/hobbies.html"> 
+  <meta name="twitter:title" content="ふじえもんの趣味">
+  <meta name="twitter:description" content="ふじえもんの趣味を掲載しています．">
+  <meta name="twitter:image" content="https://fujiemon.dev/bgfujiemon.png">
   <meta name="twitter:card" content="summary_large_image">
 
 
@@ -54,39 +57,71 @@
       <div id="hobbies">
         <h1>趣味</h1>
           <ul>
-            <li>読書</li>
+            <li>読書　今読んでいる本やレビューは<a href="https://booklog.jp/users/fujieng1nee7">ブクログ ふじえもんのほんだな</a>で．</li>
               <table border="1">
                 <tr>
-                  <th>書名</th><th>ふじえもんの一言</th>
+                  <th>書名</th><th>一言</th>
                 </tr>
                 <tr>
                   <td>Dr.STONE</td>
-                  <td>26巻+3話と短すぎず長すぎず．科学に興味を持ったら読むとさらにワクワクが掻き立てられる楽しい漫画．2023年時点で最高に結末に納得できた作品でした．</td>
+                  <td>27巻．科学に興味を持ったら読むとさらにワクワクが掻き立てられる楽しい漫画．2023年時点で最高に結末に納得できた作品．</td>
                 </tr>
                 <tr>
                   <td>浜村渚の計算ノート</td>
-                  <td>中学時代から読んでいる，数学が好きな少女のお話．最近出た９巻目も必見です．(まだ読みかけ)</td></tr>
-                <!-- <tr><td></td><td></td></tr> -->
+                  <td>中学時代から読んでいる，数学が好きな少女のお話．最近出た９巻目も必見です．</td>
+                </tr>
+                <tr>
+                  <td>技術書の読書術</td>
+                  <td>本の選び方とかメモを管理することなどインプットすることへの考え方の幅が広がりました．</td>
+                </tr>
+                <tr>
+                  <td>Google流ダイバーシティ&インクルージョン</td>
+                  <td>プロダクトは誰のために作るのか．その対象が開発チームにいることがどんな効果をもたらすか勉強になりました．</td>
+                </tr>
+                <tr>
+                  <td>サーバントリーダーシップ</td>
+                  <td>チーム開発をするときにどうしたらチーム，各メンバーの良さ，能力を引き出せるかを考えていたら辿り着いたサーバントリーダーシップ．</td>
+                </tr>
+
               </table>
             <br>
             <li>日本酒</li>
               <table border="1">
                 <tr>
-                  <th>銘柄</th><th>ふじえもんの一言</th>
+                  <th>銘柄</th><th>一言</th>
                 </tr>
                 <tr>
                   <td>八仙　ピンクラベル吟醸</td>
-                  <td>最初に呑んだ日本酒．</td></tr>
+                  <td>最初に呑んだ日本酒．</td>
+                </tr>
                 <tr>
                   <td>田酒</td>
-                  <td>何か良いことがあったとき，季節の変わり目に気合いを入れるために飲む地酒．</td></tr>
+                  <td>何か良いことがあったとき，季節の変わり目に気合いを入れるために飲む地酒．</td>
+                </tr>
+                <tr>
+                  <td>OMEGANE</td>
+                  <td>甘口のスパークリングで酸味が感じられる福井のお酒．お👓</td>
+                </tr>
+                <tr>
+                  <td>鳩正宗</td>
+                  <td>フルーティな感じでりんご酢がたしかにちょこっと入ってそうな味．</td>
+                </tr>
+                <tr>
+                  <td>千歳鶴</td>
+                  <td>辛口だけど癖が少ない感じで後味が好み．</td>
+                </tr>
+                <tr>
+                  <td>二世古青ラベル彗星</td>
+                  <td>やや辛口で後味がすっきりしてる．</td>
+                </tr>
                 <!-- <tr><td></td><td></td></tr> -->
               </table>
             <br>
             <li>デバイス・ツール</li>
               <table border="1">
                 <tr>
-                  <th>品名or型番</th><th>ふじえもんの一言</th>                  </tr>
+                  <th>品名or型番</th><th>一言</th>
+                </tr>
                 <tr>
                   <td>DELL-U2723QX</td>
                   <td>27インチの4Kモニター．発色にこだわって選びました．豊富なインターフェースがポイント．スピーカーが無いけどイヤホンを使っているので問題無し．</td>
@@ -94,6 +129,10 @@
                 <tr>
                   <td>HHKB Professional HYBRID Type-S 白</td>
                   <td>ハッカー憧れ(?)のキーボード⌨️．打鍵感やコンパクトな配列がお気に入りです．最近は一部桜色のキートップに交換しました．</td>
+                </tr>
+                <tr>
+                  <td>iPad Air4</td>
+                  <td>タブレットで読書も動画視聴もゲームも捗ります．GoodNotes入れて使っています．</td>
                 </tr>
                 <!-- <tr><td></td><td></td></tr> -->
               </table>
