--- a/slides.html
+++ b/slides.html
@@ -5,14 +5,17 @@
   <title>ふじえもんの登壇資料</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon-32.ico">
-  <meta name="description" content="ふじえもんの登壇資料を掲載しています。"> 
+  <meta name="description" content="ふじえもんの登壇資料を掲載しています．"> 
   <meta name="keywords" content="ポートフォリオ, ふじえもん, 登壇資料, プレゼンテーション"> 
   <meta name="author" content="ふじえもん">
 
   <meta property="og:title" content="ふじえもんの登壇資料"> 
-  <meta property="og:description" content="ふじえもんの登壇資料を掲載しています。"> 
-  <meta property="og:image" content="image/fujiemon-slides.png"> 
-  <meta property="og:url" content="https://fujiemon.fujieshota.repl.co/slides.html"> 
+  <meta property="og:description" content="ふじえもんの登壇資料を掲載しています．"> 
+  <meta property="og:image" content="https://fujiemon.dev/bgfujiemon.png"> 
+  <meta property="og:url" content="https://fujiemon.dev/slides.html"> 
+  <meta name="twitter:title" content="ふじえもんの登壇資料">
+  <meta name="twitter:description" content="ふじえもんの登壇資料を掲載しています．">
+  <meta name="twitter:image" content="https://fujiemon.dev/bgfujiemon.png">
   <meta name="twitter:card" content="summary_large_image">
 
 
