--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
   <meta property="og:description" content="ふじえもんのポートフォリオサイトです．成果物や登壇資料を掲載しています．">
   <meta property="og:image" content="https://fujiemon.dev/bgfujiemon.png">
   <meta property="og:url" content="https://fujiemon.dev">
-   <meta property="og:type" content="website"/>
-   <meta property="og:site_name" content="ふじえもんのおへや" />
+  <meta property="og:type" content="website"/>
+  <meta property="og:site_name" content="ふじえもんのおへや" />
+  <meta name="twitter:title" content="ふじえもんのおへや">
+  <meta name="twitter:description" content="ふじえもんのポートフォリオを掲載しています．">
+  <meta name="twitter:image" content="https://fujiemon.dev/bgfujiemon.png">
   <meta name="twitter:card" content="summary_large_image">
+
   <link rel="stylesheet" href="style.css"> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
