ニュースページを追加しました

--- a/hobbies.html
+++ b/hobbies.html
@@ -5,14 +5,14 @@
   <title>ふじえもんの趣味</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon-32.ico">
-  <meta name="description" content="ふじえもんの趣味を掲載しています．"> 
-  <meta name="keywords" content="ポートフォリオ, ふじえもん, 登壇資料, プレゼンテーション"> 
+  <meta name="description" content="ふじえもんの趣味を掲載しています．">
+  <meta name="keywords" content="ポートフォリオ, ふじえもん, 登壇資料, プレゼンテーション">
   <meta name="author" content="ふじえもん">
 
-  <meta property="og:title" content="ふじえもんの趣味"> 
-  <meta property="og:description" content="ふじえもんの趣味を掲載しています．"> 
+  <meta property="og:title" content="ふじえもんの趣味">
+  <meta property="og:description" content="ふじえもんの趣味を掲載しています．">
   <meta property="og:image" content="https://fujiemon.dev/bgfujiemon.png">
-  <meta property="og:url" content="https://fujiemon.dev/hobbies.html"> 
+  <meta property="og:url" content="https://fujiemon.dev/hobbies.html">
   <meta name="twitter:title" content="ふじえもんの趣味">
   <meta name="twitter:description" content="ふじえもんの趣味を掲載しています．">
   <meta name="twitter:image" content="https://fujiemon.dev/bgfujiemon.png">
@@ -37,22 +37,16 @@
         </h1>
         <p>
           ふじえもんのおへやへようこそ．<br>
-          骨伝導で補聴している難聴者です．<br>
-          エンジニアとして音に関するプロダクト開発や研究とか．<br>
-          所属:筑波技術大学産業技術学部(2020-04~2024-03)，UN-FROZEN(筑波技術大学開発サークル)，デフエンジニアの会<br>
-          聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中．
-        </p>
-        <p>#骨伝導 #チーム開発におけるコミュニケーション #音声認識 #音源分離 #聴覚障害に関する情報保障 #日本酒</p>
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
-            <li><a href="index.html#section1">ポートフォリオ</a></li>
+            <li><a href="news.html">ニュース</a></li>
             <li><a href="slides.html">登壇資料</a></li>
-            <li><a href="hobbies.html">趣味</a></li>
+            <li><a href="hobbies.html">本棚と酒棚</a></li>
           </ul>
         </nav>
       </div>
-    </header>  
+    </header>
     <main>
       <div id="hobbies">
         <h1>趣味</h1>
@@ -132,7 +126,7 @@
                 </tr>
                 <tr>
                   <td>iPad Air4</td>
-                  <td>タブレットで読書も動画視聴もゲームも捗ります．GoodNotes入れて使っています．</td>
+                  <td>タブレットで読書も動画視聴もゲームも捗ります．GoodNotesを入れて使っています．</td>
                 </tr>
                 <!-- <tr><td></td><td></td></tr> -->
               </table>
