--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>ふじえもんのおへや</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="icon" type="image/x-icon" href="favicon-32.ico"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="favicon-32.ico">
   <meta name="description" content="ふじえもんのポートフォリオサイトです．ポートフォリオや登壇資料を掲載しています．">
   <meta name="keywords" content="ポートフォリオ, ふじえもん, 難聴, 音声認識， Blow Words, 聞こえによらないコミュニケーション">
   <meta name="author" content="ふじえもん">
@@ -21,14 +21,14 @@
   <meta name="twitter:image" content="https://fujiemon.dev/bgfujiemon.png">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="stylesheet" href="style.css"> 
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
-<body>  
+<body>
   <div id="main-container">
     <header>
       <div id="header-nav">
@@ -47,9 +47,9 @@
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
-            <li><a href="#section1">ポートフォリオ</a></li>
+            <li><a href="news.html">ニュース</a></li>
             <li><a href="slides.html">登壇資料</a></li>
-            <li><a href="hobbies.html">趣味</a></li>
+            <li><a href="hobbies.html">本棚と酒棚</a></li>
           </ul>
         </nav>
       </div>
@@ -58,7 +58,7 @@
     <div id="content">
       <div id="section1">
         <h1>ポートフォリオ</h1>
-        <h2>2024-03-23現在はBlowWordsのみ(デプロイの都合上)遊ぶことができます．</h2>
+        <h2>2024-08-08現在はBlowWordsのみ(デプロイの都合上)遊ぶことができます．</h2>
         <div class="portfolio-card-container">
           <div class="card">
             <img src="image/bgBWs.png" alt="BlowWords" class="card-image">
@@ -87,41 +87,29 @@
       </div>
 
       <div id="section3">
-        <h1>実績</h1>
+        <h1>開発経験</h1>
           <ul>
-            <li>技育CAMPに2回参加しました</li>
-            <li><a href = "https://nposw.org/tsukuba230203/">StartupWeekendTsukubaにて優勝しました</a></li>
-            <li>講義でチーム開発をいくつか経験しました
-              <p>Java(ウォーターフォール開発),　Node.js(Agile開発)を経験しました．それぞれ3~4人のチームです．
+            <li><a href = "https://nposw.org/tsukuba230203/">Startup Weekend Tsukuba 9th Rebornにて優勝しました</a></li>
+            <li>Java(ウォーターフォール開発),　Node.js(Agile開発)を経験しました．それぞれ3~4人のチームです．
                 <br>
                 経験したことや学びは<a href = "https://note.com/fujiemon_tad/n/n244aa6e76df5">こちらのnote記事「経験備忘録_チーム開発_2022年」</a>で書きました．
               </p>
               <iframe class="note-embed" src="https://note.com/embed/notes/n244aa6e76df5" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
             </li>
-            <li>特別研究でPythonを主に使用しています．
-              <p>音声認識,音源分離に関するテーマで，実験結果の検定でも用いました．
-              <br>
-                また，Vimやシェルスクリプト，Dockerなども経験しました．
-              </p>
-
-
             </li>
-            <li>Ruby on Railsを使った実務経験
+            <li>Ruby on Railsを使った実務経験(2022.11~2023.09)
               <p>(社会人&学生向け)相談予約システムの開発<a href = "https://tsukutech-social.net/site/schedule_reservation/">聴覚障害者を対象とした相談予約システム</a>のホームページです．</p>
             </li>
-              <li>HTML,CSSを使ったホームページ作成
+            <li>HTML,CSSを使ったホームページ作成
               <p>筑波技術大学開発サークル<a href = "https://un-frozen.jp/">UN-FROZEN</a>のホームページ．</p>
               <p>筑波技術大学の学園祭<a href = "https://tenryusai2023.com/">天龍祭2023</a>のホームページ．</p>
             </li>
-            <li>研究
-              <p>藤江匠汰, & 渡辺知恵美. (2023). ろう・難聴者と聴者のグループ対話における理解度・参加度の高いコミュニケーションストラテジー. 研究報告アクセシビリティ (AAC), 2023(7), 1-8.<a href="https://ipsj.ixsq.nii.ac.jp/ej/index.php?active_action=repository_view_main_item_detail&page_id=13&block_id=8&item_id=231333&item_no=1">情報学広場：情報処理学会電子図書館</a></p>
-              <p>藤江匠汰, & 安啓一, & 小林彰夫. (2024). 混合音声から抽出した難聴者の発話の聞き取りやすさに関する客観的および主観的な評価による検討. 研究報告アクセシビリティ (AAC), 2024(17), 1-6.<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=233189&item_no=1&page_id=13&block_id=8">情報学広場：情報処理学会電子図書館</a></p>
-            </li>
-            <li>その他表彰など
-              <p>成績優秀や学外での取り組みが評価され学長賞をいただきました．<a href = "https://www.tsukuba-tech.ac.jp/topics/2024/03/22001244.html">筑波技術大学ホームページ-令和5年度筑波技術大学学位記授与式を挙行</a></p>
-              <p>第24回アクセシビリティ研究会(2024-AAC-024)学生奨励賞 受賞 <a href="https://ipsj-aac.org/%e5%ad%a6%e7%94%9f%e5%a5%a8%e5%8a%b1%e8%b3%9e/">学生奨励賞 - 情報処理学会 アクセシビリティ研究会</a></p>
-            </li>
-          </ul>
+        <h1>研究</h1>
+          <li>藤江匠汰, & 渡辺知恵美. (2023). ろう・難聴者と聴者のグループ対話における理解度・参加度の高いコミュニケーションストラテジー. 研究報告アクセシビリティ (AAC), 2023(7), 1-8.<a href="https://ipsj.ixsq.nii.ac.jp/ej/index.php?active_action=repository_view_main_item_detail&page_id=13&block_id=8&item_id=231333&item_no=1">情報学広場：情報処理学会電子図書館</a></li>
+          <li>藤江匠汰, & 安啓一, & 小林彰夫. (2024). 混合音声から抽出した難聴者の発話の聞き取りやすさに関する客観的および主観的な評価による検討. 研究報告アクセシビリティ (AAC), 2024(17), 1-6.<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=233189&item_no=1&page_id=13&block_id=8">情報学広場：情報処理学会電子図書館</a></li>
+        <h1>表彰</h1>
+          <li>成績優秀や学外での取り組みが評価され学長賞をいただきました．<a href = "https://www.tsukuba-tech.ac.jp/topics/2024/03/22001244.html">筑波技術大学ホームページ-令和5年度筑波技術大学学位記授与式を挙行</a></li>
+          <li>第24回アクセシビリティ研究会(2024-AAC-024)学生奨励賞 受賞 <a href="https://ipsj-aac.org/%e5%ad%a6%e7%94%9f%e5%a5%a8%e5%8a%b1%e8%b3%9e/">学生奨励賞 - 情報処理学会 アクセシビリティ研究会</a></li>
 
       </div>
     </div>
@@ -139,10 +127,7 @@
         </div>
       </div>
     </footer>
-  </div>  
+  </div>
 
 </body>
 </html>
-
-
-
