--- a/news.html
+++ b/news.html
@@ -34,12 +34,6 @@
         </h1>
         <p>
           ふじえもんのおへやへようこそ．<br>
-          骨伝導で補聴している難聴者です．<br>
-          エンジニアとして音に関するプロダクト開発や研究とか．<br>
-          所属:筑波技術大学産業技術学部(2020-04~2024-03)，UN-FROZEN(筑波技術大学開発サークル)，デフエンジニアの会<br>
-          聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中．
-        </p>
-        <p>#骨伝導 #チーム開発におけるコミュニケーション #音声認識 #音源分離 #聴覚障害に関する情報保障 #日本酒</p>
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
@@ -51,9 +45,41 @@
       </div>
     </header>
 
-    <div id="activity">
-      <h2>まだなにもないよ～</h2>
-
+    <div id="content">
+      <div id="news">
+        <div class="news-item">
+          <span class="date">2024.08.08</span>
+          <span class="news-content">ニュースページを作りました．今後はこちらでイベント参加報告や記事投稿報告をします．</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2024.07.25</span>
+          <span class="news-content">第25回アクセシビリティ研究会に現地参加しました</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2024.07.19</span>
+          <span class="news-content"><a href="https://swtsukuba.doorkeeper.jp/events/172193"> Weekend Tsukuba 12th</a>に参加しました(結果:3位)</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2024.07.13</span>
+          <span class="news-content">第2回デフ・ハッカソン~聴覚障害に関するアクセシビリティを考えよう~を開催しました</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2024.06.20</span>
+          <span class="news-content">VCCA2024をオンライン聴講しました</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2024.06.14</span>
+          <span class="news-content">音学シンポジウムに現地参加しました</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2024.04.13</span>
+          <span class="news-content">UN-FROZEN&音が目でわかるプロジェクト主催のハッカソンに参加しました</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2024.04.01</span>
+          <span class="news-content">音声関係のエンジニアとして就職しました</span>
+        </div>
+      </div>
     </div>
 
 
