--- a/slides.html
+++ b/slides.html
@@ -5,14 +5,14 @@
   <title>ふじえもんの登壇資料</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon-32.ico">
-  <meta name="description" content="ふじえもんの登壇資料を掲載しています．"> 
-  <meta name="keywords" content="ポートフォリオ, ふじえもん, 登壇資料, プレゼンテーション"> 
+  <meta name="description" content="ふじえもんの登壇資料を掲載しています．">
+  <meta name="keywords" content="ポートフォリオ, ふじえもん, 登壇資料, プレゼンテーション">
   <meta name="author" content="ふじえもん">
 
-  <meta property="og:title" content="ふじえもんの登壇資料"> 
-  <meta property="og:description" content="ふじえもんの登壇資料を掲載しています．"> 
-  <meta property="og:image" content="https://fujiemon.dev/bgfujiemon.png"> 
-  <meta property="og:url" content="https://fujiemon.dev/slides.html"> 
+  <meta property="og:title" content="ふじえもんの登壇資料">
+  <meta property="og:description" content="ふじえもんの登壇資料を掲載しています．">
+  <meta property="og:image" content="https://fujiemon.dev/bgfujiemon.png">
+  <meta property="og:url" content="https://fujiemon.dev/slides.html">
   <meta name="twitter:title" content="ふじえもんの登壇資料">
   <meta name="twitter:description" content="ふじえもんの登壇資料を掲載しています．">
   <meta name="twitter:image" content="https://fujiemon.dev/bgfujiemon.png">
@@ -36,22 +36,16 @@
         </h1>
         <p>
           ふじえもんのおへやへようこそ．<br>
-          骨伝導で補聴している難聴者です．<br>
-          エンジニアとして音に関するプロダクト開発や研究とか．<br>
-          所属:筑波技術大学産業技術学部(2020-04~2024-03)，UN-FROZEN(筑波技術大学開発サークル)，デフエンジニアの会<br>
-          聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中．
-        </p>
-        <p>#骨伝導 #チーム開発におけるコミュニケーション #音声認識 #音源分離 #聴覚障害に関する情報保障 #日本酒</p>
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
-            <li><a href="index.html#section1">ポートフォリオ</a></li>
+            <li><a href="news.html">ニュース</a></li>
             <li><a href="slides.html">登壇資料</a></li>
-            <li><a href="hobbies.html">趣味</a></li>
+            <li><a href="hobbies.html">本棚と酒棚</a></li>
           </ul>
         </nav>
       </div>
-    </header>  
+    </header>
     <main>
       <div id="slides">
         <h1>登壇資料</h1>
@@ -82,7 +76,7 @@
             <h3>学生としてRSGT2024に参加して得られた学び</h3>
             <iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/608cdc1acc7a43efa0f886ecaa7eba31" title="学生としてRSGT2024に参加して得られた学び / Lessons learned from participating in RSGT2024 as a student" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 315;" data-ratio="1.7777777777777777"></iframe>
       </div>
-         
+
     </main>
     <footer>
       <div id="footer-nav">
