スクラムフェス仙台2024に参加した旨追記しました．

--- a/news.html
+++ b/news.html
@@ -48,6 +48,10 @@
     <div id="content">
       <div id="news">
         <div class="news-item">
+          <span class="date">2024.08.23</span>
+          <span class="news-content">スクラムフェス仙台2024に運営(情報保障担当)として参加しました．感想noteです．<a href="https://note.com/fujiemon_tad/n/ne50988b52993">スクラムフェス仙台2024に参加したよ-Day1</a></span>
+        </div>
+        <div class="news-item">
           <span class="date">2024.08.08</span>
           <span class="news-content">ニュースページを作りました．今後はこちらでイベント参加報告や記事投稿報告をします．</span>
         </div>
