9月からの活動について更新しました

--- a/news.html
+++ b/news.html
@@ -48,6 +48,23 @@
     <div id="content">
       <div id="news">
         <div class="news-item">
+          <span class="date">2024.10.20</span>
+          <span class="news-content">天龍祭2024に遊びに行きました．</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2024.09.21~22</span>
+          <span class="news-content">UN-FROZEN企画のポケカハッカソンに参加しました．</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2024.09.21</span>
+          <span class="news-content"><a href="https://tsukutech-social.net/site/event/20240921/">聴覚障害のある社会人のための情報交換会</a>でお役立ちツールの共有をテーマに情報提供を行いました．</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2024.09.06</span>
+          <span class="news-content">2024年秋季音響学会でポスター発表しました．混合音声から抽出した発話の聴取に関する聴者・難聴者の比較
+            ◎藤江 匠汰( )，安 啓一(筑波技術大学)，小林 彰夫(大和大学)</span>
+        </div>
+        <div class="news-item">
           <span class="date">2024.08.23</span>
           <span class="news-content">スクラムフェス仙台2024に運営(情報保障担当)として参加しました．感想noteです．<a href="https://note.com/fujiemon_tad/n/ne50988b52993">スクラムフェス仙台2024に参加したよ-Day1</a></span>
         </div>
@@ -83,6 +100,16 @@
           <span class="date">2024.04.01</span>
           <span class="news-content">音声関係のエンジニアとして就職しました</span>
         </div>
+        <div class="news-item">
+          <span class="date">2023.12.30</span>
+          <span class="news-content">Zenn <a href="https://zenn.dev/fujiengineer/articles/bdbea80504a9ee">ポートフォリオをつくりました</a>を公開しました．<br>アクセシビリティに関してのこだわりなども説明しています．</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2023.02.03~05</span>
+          <span class="news-content"><a href = "https://nposw.org/tsukuba230203/">Startup Weekend Tsukuba 9th Reborn</a>にて優勝しました</span>
+        </div>
+
+
       </div>
     </div>
 
