--- a/hobbies.html
+++ b/hobbies.html
@@ -128,6 +128,10 @@
                   <td>iPad Air4</td>
                   <td>タブレットで読書も動画視聴もゲームも捗ります．GoodNotesを入れて使っています．</td>
                 </tr>
+                <tr>
+                  <td>Open Comm2</td>
+                  <td>オンラインMTGでの通話向けのブームマイクがついている骨伝導イヤホンです．音楽はOpenRun Pro Miniで聴いています．</td>
+                </tr>
                 <!-- <tr><td></td><td></td></tr> -->
               </table>
 
