--- a/news.html
+++ b/news.html
@@ -78,7 +78,7 @@
         </div>
         <div class="news-item">
           <span class="date">2024.07.19</span>
-          <span class="news-content"><a href="https://swtsukuba.doorkeeper.jp/events/172193"> Weekend Tsukuba 12th</a>に参加しました(結果:3位)</span>
+          <span class="news-content"><a href="https://swtsukuba.doorkeeper.jp/events/172193">Startup Weekend Tsukuba 12th</a>に参加しました(結果:3位)</span>
         </div>
         <div class="news-item">
           <span class="date">2024.07.13</span>
