--- a/index.html
+++ b/index.html
@@ -57,28 +57,27 @@
 
     <div id="content">
       <div id="section1">
-        <h1>ポートフォリオ</h1>
-        <h2>2024-08-08現在はBlowWordsのみ(デプロイの都合上)遊ぶことができます．</h2>
+        <h1>つくったもの</h1>
         <div class="portfolio-card-container">
           <div class="card">
             <img src="image/bgBWs.png" alt="BlowWords" class="card-image">
             <div class="card-content">
-              <h2 class="card-title"><a href = "https://blowwords.replit.app/">BlowWords</a><img src="image/iconblowwords724.png" alt="BlowWordsのアイコン" class="icon"></h2>
-              <p class="card-description">あなたの声をシャボン玉のように浮かぶ文字として表示します．</p>
+              <h2 class="card-title"><a href = "https://github.com/shotafujie/BlowWords">GitHub-BlowWords</a><img src="image/iconblowwords724.png" alt="BlowWordsのアイコン" class="icon"></h2>
+              <p class="card-description">あなたの声をシャボン玉のように浮かぶ文字として表示します</p>
             </div>
           </div>
           <div class="card">
             <img src="image/bg-soundhue.png" alt="SoundHue" class="card-image">
             <div class="card-content">
-              <h2 class="card-title"><a href = "https://soundhue.fujieshota.repl.co/">SoundHue</a></h2>
-              <p class="card-description">音源の周波数成分の大きさを可視波長域の色に合わせて描写しています．</p>
+              <h2 class="card-title"><a href = "https://github.com/shotafujie/SoundHue">GitHub-SoundHue</a></h2>
+              <p class="card-description">音源の周波数成分の大きさを可視波長域の色に合わせて描画します</p>
             </div>
           </div>
           <div class="card">
             <img src="image/bg-soundhue.png" alt="Text2Emoji" class="card-image">
             <div class="card-content">
-              <h2 class="card-title"><a href = "https://text2emoji.fujieshota.repl.co/">Text2Emoji</a><img src="image/iconText2Emoji.png" alt="Text2Emojiのアイコン" class="icon"></h2>
-              <p class="card-description">音声🎙入力⌨️とテキスト📜入力⌨️ができ，特定の単語を絵🖼️文字で強調します．</p>
+              <h2 class="card-title"><a href = "https://github.com/shotafujie/Text2Emoji">GitHub-Text2Emoji</a><img src="image/iconText2Emoji.png" alt="Text2Emojiのアイコン" class="icon"></h2>
+              <p class="card-description">音声🎙入力⌨️とテキスト📜入力⌨️ができ，特定の単語を絵🖼️文字で強調します</p>
             </div>
           </div>
 
@@ -90,14 +89,15 @@
         <h1>開発経験</h1>
           <ul>
             <li>Ruby on Railsを使った実務経験(2022.11~2023.09)
-              <p>(社会人&学生向け)相談予約システムの開発<a href = "https://tsukutech-social.net/site/schedule_reservation/">聴覚障害者を対象とした相談予約システム</a>のホームページです．</p>
+              <p>(社会人&学生向け)相談予約システムの開発<a href = "https://tsukutech-social.net/site/schedule_reservation/">聴覚障害者を対象とした相談予約システム</a>のホームページです</p>
             </li>
             <li>HTML,CSSを使ったホームページ作成
-              <p>筑波技術大学開発サークル<a href = "https://un-frozen.jp/">UN-FROZEN</a>のホームページ．</p>
-              <p>筑波技術大学の学園祭<a href = "https://tenryusai2023.com/">天龍祭2023</a>のホームページ．</p>
+              <p>筑波技術大学開発サークル<a href = "https://un-frozen-deaf.github.io/unfrozen/">UN-FROZEN</a>のホームページ</p>
+              <p>筑波技術大学の学園祭<a href = "https://tenryusai2023.com/">天龍祭2023</a>のホームページ</p>
             </li>
         <h1>研究</h1>
           <li>藤江匠汰, & 渡辺知恵美. (2023). ろう・難聴者と聴者のグループ対話における理解度・参加度の高いコミュニケーションストラテジー. 研究報告アクセシビリティ (AAC), 2023(7), 1-8.<a href="https://ipsj.ixsq.nii.ac.jp/ej/index.php?active_action=repository_view_main_item_detail&page_id=13&block_id=8&item_id=231333&item_no=1">情報学広場：情報処理学会電子図書館</a></li>
+          <li>安啓一, 藤江匠汰, 中津智貴, & 平賀瑠美. (2024). 伝音性難聴のある成人による軟骨伝導型振動子の装着位置の検討—頭部固定位置による純音聴力レベルと文章了解度の変化—. 音声コミュニケーション研究会資料, 4(1), SC-2024.<a href="https://www.jstage.jst.go.jp/article/asjsc/4/1/4_SC-2024-10/_article/-char/ja/">2024年１月音声コミュニケーション研究会資料</a></li>
           <li>藤江匠汰, & 安啓一, & 小林彰夫. (2024). 混合音声から抽出した難聴者の発話の聞き取りやすさに関する客観的および主観的な評価による検討. 研究報告アクセシビリティ (AAC), 2024(17), 1-6.<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=233189&item_no=1&page_id=13&block_id=8">情報学広場：情報処理学会電子図書館</a></li>
         <h1>表彰</h1>
           <li>成績優秀や学外での取り組みが評価され学長賞をいただきました．<a href = "https://www.tsukuba-tech.ac.jp/topics/2024/03/22001244.html">筑波技術大学ホームページ-令和5年度筑波技術大学学位記授与式を挙行</a></li>
@@ -115,7 +115,7 @@
           <a href="https://note.com/fujiemon_tad/" target="_blank"><img src = "image/note-square.png" alt = "Noteのアイコンで，ふじえもんのNoteプロフィールへのリンクです．" class = "icon" ></a>
           <a href="https://qiita.com/fujiemon" target="_blank"><img src = "image/qiita-favicon.png" alt = "Qiitaのアイコンで，ふじえもんのQiitaプロフィールへのリンクです．" class = "icon" ></a>
           <a href="https://zenn.dev/fujiengineer" target="_blank"><img src = "image/zenn.svg" alt = "Zennのアイコンで，ふじえもんのZennプロフィールへのリンクです．" class = "icon" ></a>
-          <a href="https://github.com/shotafujie" target="_blank" aria-label="Githubのアイコンで，ふじえもんのGithubプロフィールへのリンクです．" class="fab fa-github icon"></a>
+          <a href="https://github.com/shotafujie" target="_blank" aria-label="GitHubのアイコンで，ふじえもんのGitHubプロフィールへのリンクです．" class="fab fa-github icon"></a>
         </div>
       </div>
     </footer>
