--- a/news.html
+++ b/news.html
@@ -48,29 +48,36 @@
     <div id="content">
       <div id="news">
         <div class="news-item">
+          <span class="date">2024.12.23~24</span>
+          <span class="news-content">第26回アクセシビリティ研究会に現地参加しました</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2024.11.30</span>
+          <span class="news-content">アクセシビリティカンファレンス福岡2024にオンライン参加しました</span>
+        </div>
+        <div class="news-item">
           <span class="date">2024.10.20</span>
-          <span class="news-content">天龍祭2024に遊びに行きました．</span>
+          <span class="news-content">天龍祭2024に遊びに行きました</span>
         </div>
         <div class="news-item">
           <span class="date">2024.09.21~22</span>
-          <span class="news-content">UN-FROZEN企画のポケカハッカソンに参加しました．</span>
+          <span class="news-content">UN-FROZEN企画のポケカハッカソンに参加しました</span>
         </div>
         <div class="news-item">
           <span class="date">2024.09.21</span>
-          <span class="news-content"><a href="https://tsukutech-social.net/site/event/20240921/">聴覚障害のある社会人のための情報交換会</a>でお役立ちツールの共有をテーマに情報提供を行いました．</span>
+          <span class="news-content"><a href="https://tsukutech-social.net/site/event/20240921/">聴覚障害のある社会人のための情報交換会</a>でお役立ちツールの共有をテーマに情報提供を行いました</span>
         </div>
         <div class="news-item">
           <span class="date">2024.09.06</span>
-          <span class="news-content">2024年秋季音響学会でポスター発表しました．混合音声から抽出した発話の聴取に関する聴者・難聴者の比較
-            ◎藤江 匠汰( )，安 啓一(筑波技術大学)，小林 彰夫(大和大学)</span>
+          <span class="news-content">2024年秋季音響学会でポスター発表しました. 混合音声から抽出した発話の聴取に関する聴者・難聴者の比較 ◎藤江 匠汰( )，安 啓一(筑波技術大学)，小林 彰夫(大和大学)</span>
         </div>
         <div class="news-item">
           <span class="date">2024.08.23</span>
-          <span class="news-content">スクラムフェス仙台2024に運営(情報保障担当)として参加しました．感想noteです．<a href="https://note.com/fujiemon_tad/n/ne50988b52993">スクラムフェス仙台2024に参加したよ-Day1</a></span>
+          <span class="news-content">スクラムフェス仙台2024に運営(情報保障担当)として参加しました.感想noteです<a href="https://note.com/fujiemon_tad/n/ne50988b52993">スクラムフェス仙台2024に参加したよ-Day1</a></span>
         </div>
         <div class="news-item">
           <span class="date">2024.08.08</span>
-          <span class="news-content">ニュースページを作りました．今後はこちらでイベント参加報告や記事投稿報告をします．</span>
+          <span class="news-content">ニュースページを作りました．今後はこちらでイベント参加報告や記事投稿報告をします</span>
         </div>
         <div class="news-item">
           <span class="date">2024.07.25</span>
@@ -102,7 +109,7 @@
         </div>
         <div class="news-item">
           <span class="date">2023.12.30</span>
-          <span class="news-content">Zenn <a href="https://zenn.dev/fujiengineer/articles/bdbea80504a9ee">ポートフォリオをつくりました</a>を公開しました．<br>アクセシビリティに関してのこだわりなども説明しています．</span>
+          <span class="news-content">Zenn <a href="https://zenn.dev/fujiengineer/articles/bdbea80504a9ee">ポートフォリオをつくりました</a>を公開しました．アクセシビリティに関してのこだわりなども説明しています</span>
         </div>
         <div class="news-item">
           <span class="date">2023.02.03~05</span>
@@ -122,7 +129,7 @@
           <a href="https://note.com/fujiemon_tad/" target="_blank"><img src = "image/note-square.png" alt = "Noteのアイコンで，ふじえもんのNoteプロフィールへのリンクです．" class = "icon" ></a>
           <a href="https://qiita.com/fujiemon" target="_blank"><img src = "image/qiita-favicon.png" alt = "Qiitaのアイコンで，ふじえもんのQiitaプロフィールへのリンクです．" class = "icon" ></a>
           <a href="https://zenn.dev/fujiengineer" target="_blank"><img src = "image/zenn.svg" alt = "Zennのアイコンで，ふじえもんのZennプロフィールへのリンクです．" class = "icon" ></a>
-          <a href="https://github.com/shotafujie" target="_blank" aria-label="Githubのアイコンで，ふじえもんのGithubプロフィールへのリンクです．" class="fab fa-github icon"></a>
+          <a href="https://github.com/shotafujie" target="_blank" aria-label="GitHubのアイコンで，ふじえもんのGitHubプロフィールへのリンクです．" class="fab fa-github icon"></a>
         </div>
       </div>
     </footer>
