--- a/slides.html
+++ b/slides.html
@@ -86,7 +86,7 @@
           <a href="https://note.com/fujiemon_tad/" target="_blank"><img src = "image/note-square.png" alt = "Noteのアイコンで，ふじえもんのNoteプロフィールへのリンクです．" class = "icon" ></a>
           <a href="https://qiita.com/fujiemon" target="_blank"><img src = "image/qiita-favicon.png" alt = "Qiitaのアイコンで，ふじえもんのQiitaプロフィールへのリンクです．" class = "icon" ></a>
           <a href="https://zenn.dev/fujiengineer" target="_blank"><img src = "image/zenn.svg" alt = "Zennのアイコンで，ふじえもんのZennプロフィールへのリンクです．" class = "icon" ></a>
-          <a href="https://github.com/shotafujie" target="_blank" aria-label="Githubのアイコンで，ふじえもんのGithubプロフィールへのリンクです．" class="fab fa-github icon"></a>
+          <a href="https://github.com/shotafujie" target="_blank" aria-label="GitHubのアイコンで，ふじえもんのGitHubプロフィールへのリンクです．" class="fab fa-github icon"></a>
         </div>
       </div>
     </footer>
