2025年の活動について更新しました

--- a/news.html
+++ b/news.html
@@ -2,20 +2,20 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>ふじえもんのおへや</title>
+  <title>ふじえもんの最近</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon-32.ico">
-  <meta name="description" content="ふじえもんのポートフォリオサイトです．ポートフォリオや登壇資料を掲載しています．">
+  <meta name="description" content="ふじえもんの最近の活動の様子です．参加したイベントや記事執筆のお知らせを掲載しています．">
   <meta name="keywords" content="ポートフォリオ, ふじえもん, 難聴, 音声認識， Blow Words, 聞こえによらないコミュニケーション">
   <meta name="author" content="ふじえもん">
 
   <!-- SNSシェア用のメタデータ -->
-  <meta property="og:title" content="ふじえもんのおへや">
-  <meta property="og:description" content="ふじえもんのポートフォリオサイトです．成果物や登壇資料を掲載しています．">
+  <meta property="og:title" content="ふじえもんの最近">
+  <meta property="og:description" content="ふじえもんの最近の活動の様子です．参加したイベントや記事執筆のお知らせを掲載しています．">
   <meta property="og:image" content="https://github.com/shotafujie/fujiemon/blob//bgfujiemon.png">
   <meta property="og:url" content="https://fujiemon.dev">
   <meta property="og:type" content="website"/>
-  <meta property="og:site_name" content="ふじえもんのおへや" />
+  <meta property="og:site_name" content="ふじえもんの最近" />
   <meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -47,6 +47,14 @@
 
     <div id="content">
       <div id="news">
+        <div class="news-item">
+          <span class="date">2025.02.08</span>
+          <span class="news-content">筑波技大の研究／活動展示会に遊びに行きました</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2025.02.01</span>
+          <span class="news-content">音声コミュニケーション研究会に現地参加しました</span>
+        </div>
         <div class="news-item">
           <span class="date">2024.12.23~24</span>
           <span class="news-content">第26回アクセシビリティ研究会に現地参加しました</span>
