OGP情報を統一しました

--- a/news.html
+++ b/news.html
@@ -12,10 +12,13 @@
   <!-- SNSシェア用のメタデータ -->
   <meta property="og:title" content="ふじえもんの最近">
   <meta property="og:description" content="ふじえもんの最近の活動の様子です．参加したイベントや記事執筆のお知らせを掲載しています．">
-  <meta property="og:image" content="https://github.com/shotafujie/fujiemon/blob//bgfujiemon.png">
+  <meta property="og:image" content="https://fujiemon.dev/bgfujiemon.png">
   <meta property="og:url" content="https://fujiemon.dev">
   <meta property="og:type" content="website"/>
   <meta property="og:site_name" content="ふじえもんの最近" />
+  <meta name="twitter:title" content="ふじえもんの最近">
+  <meta name="twitter:description" content="ふじえもんの最近の活動の様子です．参加したイベントや記事執筆のお知らせを掲載しています．">
+  <meta name="twitter:image" content="https://fujiemon.dev/bgfujiemon.png">
   <meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
