ヘッダーとニュース，研究報告や受賞，保持資格などを追記・編集しました

--- a/hobbies.html
+++ b/hobbies.html
@@ -31,12 +31,12 @@
   <div id="main-container">
     <header>
       <div id="header-nav">
-        <h1>ふじえもん
+        <h1>ふじえもんの趣味
         <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
         <img src="image/fujiemon-gif.gif" alt="ふじえもんのアイコンのgifです" class="icon">
         </h1>
         <p>
-          ふじえもんのおへやへようこそ．<br>
+          趣味を掲載しています．<br>
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
