--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         <p>
           ふじえもんのおへやへようこそ．<br>
           骨伝導で補聴している難聴者です．<br>
-          エンジニアとして音に関するプロダクト開発や研究とか．<br>
-          所属:筑波技術大学産業技術学部(2020-04~2024-03)，UN-FROZEN(筑波技術大学開発サークル)，デフエンジニアの会<br>
+          筑波技術大学産業技術学部(産業情報学科支援技術学コース情報保障工学領域)2024年03月卒業<br>
+          2024年04月からシステムエンジニアとして都内で働いています.<br>
+          所属コミュニティ:デフエンジニアの会,UN-FROZEN(筑波技術大学開発サークル),スクフェス仙台<br>
           聴こえに関係なく発言できる、伝わる環境づくりのために試行錯誤中．
         </p>
         <p>#骨伝導 #チーム開発におけるコミュニケーション #音声認識 #音源分離 #聴覚障害に関する情報保障 #日本酒</p>
@@ -95,14 +96,21 @@
               <p>筑波技術大学開発サークル<a href = "https://un-frozen-deaf.github.io/unfrozen/">UN-FROZEN</a>のホームページ</p>
               <p>筑波技術大学の学園祭<a href = "https://tenryusai2023.com/">天龍祭2023</a>のホームページ</p>
             </li>
+            <li>その他の制作物は<a href="https://github.com/shotafujie">GitHub/shotafujie</a>にあります．最近は主にC#(WPF/MAUI)を触っています．
+            </li>
         <h1>研究</h1>
           <li>藤江匠汰, & 渡辺知恵美. (2023). ろう・難聴者と聴者のグループ対話における理解度・参加度の高いコミュニケーションストラテジー. 研究報告アクセシビリティ (AAC), 2023(7), 1-8.<a href="https://ipsj.ixsq.nii.ac.jp/ej/index.php?active_action=repository_view_main_item_detail&page_id=13&block_id=8&item_id=231333&item_no=1">情報学広場：情報処理学会電子図書館</a></li>
           <li>安啓一, 藤江匠汰, 中津智貴, & 平賀瑠美. (2024). 伝音性難聴のある成人による軟骨伝導型振動子の装着位置の検討—頭部固定位置による純音聴力レベルと文章了解度の変化—. 音声コミュニケーション研究会資料, 4(1), SC-2024.<a href="https://www.jstage.jst.go.jp/article/asjsc/4/1/4_SC-2024-10/_article/-char/ja/">2024年１月音声コミュニケーション研究会資料</a></li>
           <li>藤江匠汰, & 安啓一, & 小林彰夫. (2024). 混合音声から抽出した難聴者の発話の聞き取りやすさに関する客観的および主観的な評価による検討. 研究報告アクセシビリティ (AAC), 2024(17), 1-6.<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=233189&item_no=1&page_id=13&block_id=8">情報学広場：情報処理学会電子図書館</a></li>
+          <li>藤江匠汰, & 安啓一, & 小林彰夫. (2024). 混合音声から抽出した発話の聴取に関する聴者・難聴者の比較, 2024秋季日本音響学会研究発表会講演論文集(ROMBUNNO.3-P-8)<a href="https://jglobal.jst.go.jp/detail?JGLOBAL_ID=202402222227109328">混合音声から抽出した発話の聴取に関する聴者・難聴者の比較 | 文献情報 | J-GLOBAL 科学技術総合リンクセンター</a></li>
         <h1>表彰</h1>
           <li>成績優秀や学外での取り組みが評価され学長賞をいただきました．<a href = "https://www.tsukuba-tech.ac.jp/topics/2024/03/22001244.html">筑波技術大学ホームページ-令和5年度筑波技術大学学位記授与式を挙行</a></li>
-          <li>第24回アクセシビリティ研究会(2024-AAC-024)学生奨励賞 受賞 <a href="https://ipsj-aac.org/%e5%ad%a6%e7%94%9f%e5%a5%a8%e5%8a%b1%e8%b3%9e/">学生奨励賞 - 情報処理学会 アクセシビリティ研究会</a></li>
-
+          <li>第24回アクセシビリティ研究会(2024-AAC-024)学生奨励賞 受賞 <a href="https://ipsj-aac.org/%e5%ad%a6%e7%94%9f%e5%a5%a8%e5%8a%b1%e8%b3%9e/">学生奨励賞 - 情報処理学会 アクセシビリティ研究会</a>及び同研究会2023年発表分ヤマハ賞(企業賞)受賞<a href="https://ipsj-aac.org/%e4%bc%81%e6%a5%ad%e8%b3%9e/#:~:text=%E7%99%BA%E8%A1%A8%E8%AB%96%E6%96%87-,%E3%83%A4%E3%83%9E%E3%83%8F%E8%B3%9E,-%E3%80%8C%E6%B7%B7%E5%90%88%E9%9F%B3%E5%A3%B0%E3%81%8B%E3%82%89">企業賞-情報処理学会 アクセシビリティ研究会</a></li>
+        <h1>資格(取得日)</h1>
+          <p>2020年以降(入学時)に取得したもののみ記載しています(英検2級/漢検準2級など高校で取得済)</p>
+          <li>普通自動車第一種運転免許(2020/11/17)</li>
+          <li>色彩検定UC級(2021年度冬期)</li>
+          <li>基本情報技術者試験(2025/01/18)</li>
       </div>
     </div>
 
