--- a/news.html
+++ b/news.html
@@ -31,12 +31,12 @@
   <div id="main-container">
     <header>
       <div id="header-nav">
-        <h1>ふじえもん
+        <h1>ふじえもんの最近
         <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
         <img src="image/fujiemon-gif.gif" alt="ふじえもんのアイコンのgifです" class="icon">
         </h1>
         <p>
-          ふじえもんのおへやへようこそ．<br>
+          ふじえもんの最近の活動の様子です．参加したイベントや記事執筆のお知らせを掲載しています．<br>
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
@@ -50,6 +50,26 @@
 
     <div id="content">
       <div id="news">
+        <div class="news-item">
+          <span class="date">2025.03.25</span>
+          <span class="news-content">Inclusive Design with Users | A11y Tokyo Meetupに参加しました</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2025.03.23</span>
+          <span class="news-content">AgilePBL祭り2025に参加しました</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2025.03.16</span>
+          <span class="news-content">荒井隆行先生 ISCAフェロー就任記念シンポジウムに参加しました</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2025.02.22</span>
+          <span class="news-content">開発サークルUN-FROZENのLLTで3トピックLTしました</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2025.02.20</span>
+          <span class="news-content">A11y Tokyo Meetupオフライン交流会#5&LTに参加しました</span>
+        </div>
         <div class="news-item">
           <span class="date">2025.02.08</span>
           <span class="news-content">筑波技大の研究／活動展示会に遊びに行きました</span>
@@ -80,7 +100,7 @@
         </div>
         <div class="news-item">
           <span class="date">2024.09.06</span>
-          <span class="news-content">2024年秋季音響学会でポスター発表しました. 混合音声から抽出した発話の聴取に関する聴者・難聴者の比較 ◎藤江 匠汰( )，安 啓一(筑波技術大学)，小林 彰夫(大和大学)</span>
+          <span class="news-content">2024年秋季音響学会でポスター発表しました. <a href="https://jglobal.jst.go.jp/detail?JGLOBAL_ID=202402222227109328">◎藤江 匠汰( )，安 啓一(筑波技術大学)，小林 彰夫(大和大学)</a></span>
         </div>
         <div class="news-item">
           <span class="date">2024.08.23</span>
