--- a/slides.html
+++ b/slides.html
@@ -30,12 +30,12 @@
   <div id="main-container">
     <header>
       <div id="header-nav">
-        <h1>ふじえもん
+        <h1>ふじえもんの登壇資料
         <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
         <img src="image/fujiemon-gif.gif" alt="ふじえもんのアイコンのgifです" class="icon">
         </h1>
         <p>
-          ふじえもんのおへやへようこそ．<br>
+          登壇資料を掲載しています．<br>
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
