4月以降のイベント参加の記録および趣味ページの音楽欄を追加．

--- a/hobbies.html
+++ b/hobbies.html
@@ -134,7 +134,30 @@
                 </tr>
                 <!-- <tr><td></td><td></td></tr> -->
               </table>
-
+            <br>
+            <li>音楽</li>
+              <table border="1">
+                <tr>
+                  <th>歌手名・グループ名(敬称略)</th><th>一言</th>
+                </tr>
+                <tr>
+                  <td>竹渕慶</td>
+                  <td>GooseHouseオリジナル曲やcoverの視聴を機に，10年以上追っかけています．世界観や信念が伝わってくるような迫力のある力強い歌声が好きです．
+                    オススメは<a href="https://music.youtube.com/watch?v=t8_8icf2Pwc">Torch</a>です．いつかライブも行きたい．</td>
+                </tr>
+                <tr>
+                  <td>Snarky Puppy</td>
+                  <td>後述のLarnell Lewisが在籍しているバンド．
+                    ジャズ・フュージョンの要素が強いですが，ジャンルを超えた音楽性が魅力的です．
+                    ベタですが<a href="https://music.youtube.com/watch?v=bRYHiUlzHkU">Lingus</a>がオススメです．LIVEも最近行きました．最高でした．</td>
+                </tr>
+                <tr>
+                  <td>Larnell Lewis</td>
+                  <td>WIRED.jpのYouTubeで配信されたLarnell Lewisによるドラムの技紹介動画を見てハマりました．グルーヴが最高です．
+                    やはりまず聞くべきは<a href="https://music.youtube.com/watch?v=1UXK7hvHZRA">Change Your Mind</a>でしょう．</td>
+                </tr>
+                <!-- <tr><td></td><td></td></tr> -->
+              </table>
           </ul>
     </main>
     <footer>
