--- a/news.html
+++ b/news.html
@@ -51,6 +51,18 @@
     <div id="content">
       <div id="news">
         <div class="news-item">
+          <span class="date">2025.06.04</span>
+          <span class="news-content">Snarky Puppyの来日公演 @Zepp Shinjukuに参戦しました.最高でした!</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2025.04.10</span>
+          <span class="news-content">Webアクセシビリティの学校 2025 春 課外授業に参加しました</span>
+        </div>
+        <div class="news-item">
+          <span class="date">2025.04.06</span>
+          <span class="news-content">note<a href="https://note.com/fujiemon_tad/n/na095f78f5edd">新卒一年目をふりかえって</a>を書きました</span>
+        </div>
+        <div class="news-item">
           <span class="date">2025.03.25</span>
           <span class="news-content">Inclusive Design with Users | A11y Tokyo Meetupに参加しました</span>
         </div>
