--- a/hobbies.html
+++ b/hobbies.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <title>ふじえもんの趣味</title>
@@ -24,7 +25,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -32,15 +33,14 @@
     <header>
       <div id="header-nav">
         <h1>ふじえもんの趣味
-        <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
-        <img src="image/fujiemon-gif.gif" alt="ふじえもんのアイコンのgifです" class="icon">
+          <img src="image/fujiemon-white.png" alt="プロフィールアイコン" class="icon">
+          <img src="image/fujiemon-gif.gif" alt="ふじえもんのアイコンのgifです" class="icon">
         </h1>
         <p>
           趣味を掲載しています．<br>
         <nav>
           <ul>
             <li><a href="index.html">ホーム</a></li>
-            <li><a href="news.html">ニュース</a></li>
             <li><a href="slides.html">登壇資料</a></li>
             <li><a href="hobbies.html">本棚と酒棚</a></li>
           </ul>
@@ -49,129 +49,69 @@
     </header>
     <main>
       <div id="hobbies">
-        <h1>趣味</h1>
-          <ul>
-            <li>読書　今読んでいる本やレビューは<a href="https://booklog.jp/users/fujieng1nee7">ブクログ ふじえもんのほんだな</a>で．</li>
-              <table border="1">
-                <tr>
-                  <th>書名</th><th>一言</th>
-                </tr>
-                <tr>
-                  <td>Dr.STONE</td>
-                  <td>27巻．科学に興味を持ったら読むとさらにワクワクが掻き立てられる楽しい漫画．2023年時点で最高に結末に納得できた作品．</td>
-                </tr>
-                <tr>
-                  <td>浜村渚の計算ノート</td>
-                  <td>中学時代から読んでいる，数学が好きな少女のお話．最近出た９巻目も必見です．</td>
-                </tr>
-                <tr>
-                  <td>技術書の読書術</td>
-                  <td>本の選び方とかメモを管理することなどインプットすることへの考え方の幅が広がりました．</td>
-                </tr>
-                <tr>
-                  <td>Google流ダイバーシティ&インクルージョン</td>
-                  <td>プロダクトは誰のために作るのか．その対象が開発チームにいることがどんな効果をもたらすか勉強になりました．</td>
-                </tr>
-                <tr>
-                  <td>サーバントリーダーシップ</td>
-                  <td>チーム開発をするときにどうしたらチーム，各メンバーの良さ，能力を引き出せるかを考えていたら辿り着いたサーバントリーダーシップ．</td>
-                </tr>
-
-              </table>
-            <br>
-            <li>日本酒</li>
-              <table border="1">
-                <tr>
-                  <th>銘柄</th><th>一言</th>
-                </tr>
-                <tr>
-                  <td>八仙 ピンクラベル吟醸</td>
-                  <td>最初に呑んだ日本酒．</td>
-                </tr>
-                <tr>
-                  <td>田酒</td>
-                  <td>何か良いことがあったとき，季節の変わり目に気合いを入れるために飲む地酒．</td>
-                </tr>
-                <tr>
-                  <td>OMEGANE</td>
-                  <td>甘口のスパークリングで酸味が感じられる福井のお酒．お👓</td>
-                </tr>
-                <tr>
-                  <td>鳩正宗</td>
-                  <td>フルーティな感じでりんご酢がたしかにちょこっと入ってそうな味．</td>
-                </tr>
-                <tr>
-                  <td>千歳鶴</td>
-                  <td>辛口だけど癖が少ない感じで後味が好み．</td>
-                </tr>
-                <tr>
-                  <td>二世古青ラベル彗星</td>
-                  <td>やや辛口で後味がすっきりしてる．</td>
-                </tr>
-                <!-- <tr><td></td><td></td></tr> -->
-              </table>
-            <br>
-            <li>デバイス・ツール</li>
-              <table border="1">
-                <tr>
-                  <th>品名or型番</th><th>一言</th>
-                </tr>
-                <tr>
-                  <td>DELL-U2723QX</td>
-                  <td>27インチの4Kモニター．発色にこだわって選びました．豊富なインターフェースがポイント．スピーカーが無いけどイヤホンを使っているので問題無し．</td>
-                </tr>
-                <tr>
-                  <td>HHKB Professional HYBRID Type-S 白</td>
-                  <td>ハッカー憧れ(?)のキーボード⌨️．打鍵感やコンパクトな配列がお気に入りです．最近は一部桜色のキートップに交換しました．</td>
-                </tr>
-                <tr>
-                  <td>iPad Air4</td>
-                  <td>タブレットで読書も動画視聴もゲームも捗ります．GoodNotesを入れて使っています．</td>
-                </tr>
-                <tr>
-                  <td>Open Comm2</td>
-                  <td>オンラインMTGでの通話向けのブームマイクがついている骨伝導イヤホンです．音楽はOpenRun Pro Miniで聴いています．</td>
-                </tr>
-                <!-- <tr><td></td><td></td></tr> -->
-              </table>
-            <br>
-            <li>音楽</li>
-              <table border="1">
-                <tr>
-                  <th>歌手名・グループ名(敬称略)</th><th>一言</th>
-                </tr>
-                <tr>
-                  <td>竹渕慶</td>
-                  <td>GooseHouseオリジナル曲やcoverの視聴を機に，10年以上追っかけています．世界観や信念が伝わってくるような迫力のある力強い歌声が好きです．
-                    オススメは<a href="https://music.youtube.com/watch?v=t8_8icf2Pwc">Torch</a>です．いつかライブも行きたい．</td>
-                </tr>
-                <tr>
-                  <td>Snarky Puppy</td>
-                  <td>後述のLarnell Lewisが在籍しているバンド．
-                    ジャズ・フュージョンの要素が強いですが，ジャンルを超えた音楽性が魅力的です．
-                    ベタですが<a href="https://music.youtube.com/watch?v=bRYHiUlzHkU">Lingus</a>がオススメです．LIVEも最近行きました．最高でした．</td>
-                </tr>
-                <tr>
-                  <td>Larnell Lewis</td>
-                  <td>WIRED.jpのYouTubeで配信されたLarnell Lewisによるドラムの技紹介動画を見てハマりました．グルーヴが最高です．
-                    やはりまず聞くべきは<a href="https://music.youtube.com/watch?v=1UXK7hvHZRA">Change Your Mind</a>でしょう．</td>
-                </tr>
-                <!-- <tr><td></td><td></td></tr> -->
-              </table>
-          </ul>
+        <ul>
+          <span>
+            今読んでいる本やレビューは
+            <a href="https://booklog.jp/users/fujieng1nee7">ブクログ ふじえもんのほんだな</a>で．
+          </span>
+          <table border="1">
+            <tr>
+              <td>Dr.STONE</td>
+              <td>27巻．科学に興味を持ったら読むとさらにワクワクが掻き立てられる楽しい漫画．2023年時点で最高に結末に納得できた作品．</td>
+            </tr>
+            <tr>
+              <td>浜村渚の計算ノート</td>
+              <td>中学時代から読んでいる，数学が好きな少女のお話．最近出た９巻目も必見です．</td>
+            </tr>
+            <tr>
+              <td>技術書の読書術</td>
+              <td>本の選び方とかメモを管理することなどインプットすることへの考え方の幅が広がりました．</td>
+            </tr>
+            <tr>
+            <tr>
+              <td>サーバントリーダーシップ</td>
+              <td>チーム開発をするときにどうしたらチーム，各メンバーの良さ，能力を引き出せるかを考えていたら辿り着いたサーバントリーダーシップ．</td>
+            </tr>
+            <tr>
+              <td>八仙 ピンクラベル吟醸</td>
+              <td>最初に呑んだ日本酒．</td>
+            </tr>
+            <tr>
+              <td>田酒</td>
+              <td>何か良いことがあったとき，季節の変わり目に気合いを入れるために飲む地酒．</td>
+            </tr>
+            <tr>
+              <td>DELL-U2723QX</td>
+              <td>27インチの4Kモニター．発色にこだわって選びました．豊富なインターフェースがポイント．スピーカーが無いけどイヤホンを使っているので問題無し．</td>
+            </tr>
+            <tr>
+              <td>HHKB Professional HYBRID Type-S 白</td>
+              <td>ハッカー憧れ(?)のキーボード⌨️．打鍵感やコンパクトな配列がお気に入りです．最近は一部桜色のキートップに交換しました．</td>
+            </tr>
+            <tr>
+              <td>Open Comm2</td>
+              <td>オンラインMTGでの通話向けのブームマイクがついている骨伝導イヤホンです．音楽はOpenRun Pro Miniで聴いています．</td>
+            </tr>
+            <tr>
+              <td>竹渕慶</td>
+              <td>GooseHouseオリジナル曲やcoverの視聴を機に，10年以上追っかけています．世界観や信念が伝わってくるような迫力のある力強い歌声が好きです．
+                オススメは<a href="https://music.youtube.com/watch?v=t8_8icf2Pwc">Torch</a>です．いつかライブも行きたい．</td>
+            </tr>
+            <tr>
+              <td>Snarky Puppy</td>
+              <td>後述のLarnell Lewisが在籍しているバンド．
+                ジャズ・フュージョンの要素が強いですが，ジャンルを超えた音楽性が魅力的です．
+                ベタですが<a href="https://music.youtube.com/watch?v=bRYHiUlzHkU">Lingus</a>がオススメです．LIVEも最近行きました．最高でした．</td>
+            </tr>
+            <tr>
+              <td>Larnell Lewis</td>
+              <td>WIRED.jpのYouTubeで配信されたLarnell Lewisによるドラムの技紹介動画を見てハマりました．グルーヴが最高です．
+                やはりまず聞くべきは<a href="https://music.youtube.com/watch?v=1UXK7hvHZRA">Change Your Mind</a>でしょう．</td>
+            </tr>
+          </table>
+        </ul>
     </main>
-    <footer>
-      <div id="footer-nav">
-        <p>連絡先: <a href="mailto:fujieng1nee7@gmail.com">fujieng1nee7[a]gmail.com </a><br>[a]は@と読み替えてください．</p>
-        <div class="social-icons">
-          <a href="https://twitter.com/fujiengineer"><img src="image/x-logo-black.png" alt="Xのアイコンで，ふじえもんのXプロフィールへのリンクです．" class="icon"></a>
-          <a href="https://note.com/fujiemon_tad/" target="_blank"><img src = "image/note-square.png" alt = "Noteのアイコンで，ふじえもんのNoteプロフィールへのリンクです．" class = "icon" ></a>
-          <a href="https://qiita.com/fujiemon" target="_blank"><img src = "image/qiita-favicon.png" alt = "Qiitaのアイコンで，ふじえもんのQiitaプロフィールへのリンクです．" class = "icon" ></a>
-          <a href="https://zenn.dev/fujiengineer" target="_blank"><img src = "image/zenn.svg" alt = "Zennのアイコンで，ふじえもんのZennプロフィールへのリンクです．" class = "icon" ></a>
-          <a href="https://github.com/shotafujie" target="_blank" aria-label="GitHubのアイコンで，ふじえもんのGitHubプロフィールへのリンクです．" class="fab fa-github icon"></a>
-        </div>
-      </div>
-    </footer>
   </div>
 </body>
+
 </html>
