--- a/index.html
+++ b/index.html
@@ -5,14 +5,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ふじえもんのおへや</title>
-  <meta name="description" content="音とコードで遊ぶエンジニア ふじえもんのポートフォリオ">
+  <meta name="description" content="ふじえもんのホームページです．成果物や登壇資料を掲載しています．">
+  <meta name="keywords" content="エンジニア, ふじえもん, 難聴, 音声認識，コミュニケーション，骨伝導">
+  <meta name="author" content="ふじえもん">
   <link rel="icon" href="favicon-32.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="image/fujiemon.png">
+  <link rel="canonical" href="https://fujiemon.dev">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- UDEV Gothic 35NF（ローカル優先）+ M PLUS 1（フォールバック） -->
   <link
     href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@400;500;600;700&family=M+PLUS+1+Code:wght@400;500&display=swap"
     rel="stylesheet">
+  <!-- SNSシェア用のメタデータ -->
+  <meta property="og:title" content="ふじえもんのおへや">
+  <meta property="og:description" content="ふじえもんのホームページです．成果物や登壇資料を掲載しています．">
+  <meta property="og:image" content="https://fujiemon.dev/bgfujiemon.png">
+  <meta property="og:url" content="https://fujiemon.dev">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="ふじえもんのおへや">
+  <meta property="og:locale" content="ja_JP">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@fujiengineer">
+  <meta name="twitter:creator" content="@fujiengineer">
+  <meta name="twitter:title" content="ふじえもんのおへや">
+  <meta name="twitter:description" content="ふじえもんのホームページです．成果物や登壇資料を掲載しています．">
+  <meta name="twitter:image" content="https://fujiemon.dev/bgfujiemon.png">
+
   <style>
     /* UDEV Gothic 35NF をローカルから読み込み */
     @font-face {
