OGP画像を修正（fujiemon.pngに変更）

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
   <!-- SNSシェア用のメタデータ -->
   <meta property="og:title" content="ふじえもんのおへや">
   <meta property="og:description" content="ふじえもんのホームページです．成果物や登壇資料を掲載しています．">
-  <meta property="og:image" content="https://fujiemon.dev/bgfujiemon.png">
+  <meta property="og:image" content="https://fujiemon.dev/image/fujiemon.png">
   <meta property="og:url" content="https://fujiemon.dev">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="ふじえもんのおへや">
   <meta property="og:locale" content="ja_JP">
 
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@fujiengineer">
   <meta name="twitter:creator" content="@fujiengineer">
   <meta name="twitter:title" content="ふじえもんのおへや">
   <meta name="twitter:description" content="ふじえもんのホームページです．成果物や登壇資料を掲載しています．">
-  <meta name="twitter:image" content="https://fujiemon.dev/bgfujiemon.png">
+  <meta name="twitter:image" content="https://fujiemon.dev/image/fujiemon.png">
 
   <link rel="stylesheet" href="style.css">
 </head>
